# eigen_crash

./: .clang-format  CMakeLists.txt  README.md
sims/: params.json
src/: eigen_tut.cpp  main.cpp
